--- a/text/state-of-the-unions/README
+++ b/text/state-of-the-unions/README
@@ -7,3 +7,6 @@ http://www.c-span.org/executive/stateoftheunion.asp
 (Thanks to Kathleen Ahrens for compiling this corpus from
 the C-Span sources.)
 
+Also 2007 onwards is from Kaggle dastset
+https://www.kaggle.com/rtatman/state-of-the-union-corpus-1989-2017/downloads/state-of-the-union-corpus-1989-2017.zip/3
+
